# google-maps-scraper

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  response_1764064679215.json  setup.py
core/: config.py
gmaps_scraper_server/: extractor.py  main_api.py  scraper.py
infrastructure/database/: connection.py  schema.py
src/slade_digital_scrapers/core/: config.py
src/slade_digital_scrapers/gmaps_scraper/: __init__.py  scraper.py
src/slade_digital_scrapers/infrastructure/api/: api.py  main.py
src/slade_digital_scrapers/infrastructure/database/: connection.py  schema.py
src/slade_digital_scrapers/infrastructure/models/entities/: repository.py  schema.py
src/slade_digital_scrapers/infrastructure/models/scraper_hisotry/: repository.py  schema.py
src/slade_digital_scrapers/linkedin_scraper/: __init__.py  actions.py  company.py  constants.py  job_search.py  jobs.py  objects.py  person.py  selectors.py
tests/: README.md  __init__.py  test_all_insertions.py  test_entities_insertion.py  test_scraper_history_insertion.py
