[tool.poetry]
name = "slade_digital_scrapers"
version = "0.1.0"
description = "Async Google Maps and LinkedIn scraping API and tooling."
authors = ["Slade Laskowski"]
readme = "README.md"
packages = [{ include = "slade_digital_scrapers", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
playwright = "*"
fastapi = "*"
uvicorn = { version = "*", extras = ["standard"] }
psycopg2-binary = "*"
selenium = "^4.38.0"
lxml = "*"
environs = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
